Grace/tests/gibbs/errors/t020.grace
// ERROR = P1030
catch
    print "Hello world"
case {
    e : Error -> print "OK; Caught an error."
}
